fix clipped messages

--- a/frontend/src/components/pages/table/OverlayComponents/Chat/MessageGroup.scss
+++ b/frontend/src/components/pages/table/OverlayComponents/Chat/MessageGroup.scss
@@ -29,5 +29,6 @@
         width: 100%;
         font-size: 14px;
         padding-left: 2rem;
+        word-break: break-all;
     }
 }
